# Human-Body-Reconstruction

./: .gitignore  CMakeLists.txt  HBR_complete.py  HBR_learn.py  README.md  complete.cpp  file_operations.hpp  generate_point_cloud.cpp  generate_skeleton_from_collada.py  generate_skeleton_manually.cpp  gl_operations.hpp  global.hpp  learn.cpp  scape_operations_complete.hpp  scape_operations_learn.hpp
